# misago-plugin

./: README.md  pyproject.toml
.github/workflows/: publish.yml
misago_plugin/: misago_plugin.py
misago_pypi_plugin/: misago_plugin.py
